Fix issues and append profile management modules.

--- a/app/partials/dashboard.html
+++ b/app/partials/dashboard.html
@@ -16,32 +16,14 @@
     </div>
 
     <!--
-    <div class="row category_result">
-        <div class="col l3 m12">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light"><img class="activator" src="img/app/profile_cover.png"></div>
-                <div class="card-content">
-                    <span class="card-title activator"><a class="blue-text" href="#">John Smith</a><i class="mdi-navigation-more-vert right grey-text text-darken-4"></i></span>
-                    <p>0 VOTES</p>
-                </div>
-                <div class="card-reveal card_detail">
-                    <span class="card-title grey-text text-darken-4">John Smith <i class="mdi-navigation-close right"></i></span>
-                    <p><b>[School Name Here]</b></p>
-                    <p>[Major Goes Here]</p>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
-    <!--
     TODO:
     - Work on adding color variety to the accordion interfaces.
     -->
 
-    <!-- TODO: Display for if user does not have any courses under their belt!
+    <!-- TODO: Display for if user does not have any courses under their belt!-->
     <div class="row center">
         <h5>You don't have any courses yet!</h5>
-    </div> -->
+    </div>
 
     <div class="row category_result">
         <ul id="course_list" class="collapsible z-depth-1" data-collapsible="accordion">
