Update application files

--- a/app/partials/dashboard.html
+++ b/app/partials/dashboard.html
@@ -20,10 +20,10 @@
     - Work on adding color variety to the accordion interfaces.
     -->
 
-    <!-- TODO: Display for if user does not have any courses under their belt!-->
+    <!-- TODO: Display for if user does not have any courses under their belt!
     <div class="row center">
         <h5>You don't have any courses yet!</h5>
-    </div>
+    </div> -->
 
     <div class="row category_result">
         <ul id="course_list" class="collapsible z-depth-1" data-collapsible="accordion">
