--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -1,5 +1,6 @@
 <nav ng-controller="NavigationCtrl">
     <ul id="user_dropdown" class="dropdown-content notif_dp">
+        <li><a href="?#/" onclick="goto('/')">Courses</a></li>
         <li><a href="?#/profile" onclick="goto('profile')">Profile</a></li>
         <!--<li><a href="#!">Settings</a></li> TODO: Create a settings page and redirect user to that! -->
         <li><a href="#/logout">Logout</a></li>
