--- a/app/partials/profile_setup.html
+++ b/app/partials/profile_setup.html
@@ -37,7 +37,7 @@
                     </div>
 
                     <div class="input-field col s12 m6">
-                        <input id="location" type="text" class="" ng-model="pro_loc">
+                        <input id="location" type="text" class="" ng-model="pro_loc" disabled>
                         <!-- Assign Model Value -->
                         <label for="location" class="active">Location</label>
                         <!-- TODO: Change the active depending on if there are any content in the profile. -->
@@ -90,35 +90,11 @@
             </div>
         </div>
 
-        <div class="card grey lighten-4">
-            <div class="card-content">
-                <div class="row"><div class="col s12 m12"><span class="card-title black-text">Courses</span></div></div>
-                <div class="row">
-                    <!--<div class="col m12 s12" ng-show="!checkMobile()">-->
-                    <div class="col m12 s12">
-                        <label>Courses</label>
-                        <select id="sub" ng-model="dp_sub" ng-click="checkDropdown()" ng-change="checkDropdown()">
-                            <option value="" disabled selected>Select a subject</option>
-                        </select>
-                    </div>
-                    <div class="col m12 s12">
-                        <ul id="cour" class="collection with-header">
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="col m12 m12 right-align">
             <br>
             <button class="btn waves-effect waves-light" type="submit" name="action" ng-click="processForm()">Submit
                 <i class="mdi-content-send right-align"></i>
             </button>
         </div>
-
-        <script>
-            $(document).ready(function() {
-                $('select').material_select();
-            });
-        </script>
     </div>
+    <script>$('select').material_select();</script>
