--- a/app/partials/signup_success.html
+++ b/app/partials/signup_success.html
@@ -10,3 +10,12 @@
         </div>
     </div>
 </div>
+
+<script>
+    Parse.$ = jQuery;
+    Parse.initialize("mxpAxRbhZmodDXNvsW2aQBSk4eoMdDmxmCXVajY1", "oBnSRa41KipKeIaiCuAgkYqxmPsXRhHkGZA8IyTN");
+    Parse.User.logOut();
+
+    var root = location.protocol + '//' + location.host + "/";
+    location.href = root;
+</script>
